# arxiv-jp-translator

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
src/: fetch_ar5iv.py  llm_client.py  translate.py
