[project]
name = "arxiv-jp-translator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "google-genai>=1.73.1",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "ruff>=0.15.10",
    "types-requests>=2.33.0.20260408",
    "types-tqdm>=4.67.3.20260408",
]
